# pptx-strip-layout

./: LICENSE  README.md  example-wolayout.pptx  example.pptx  pyproject.toml
src/pptx_strip_layout/: __init__.py  cli.py  processor.py
src/pptx_strip_layout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
